--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,2 +1,20 @@
-bundles:
-  - 2
+project_id: '638314'
+api_token: ${{ CROWDIN_PERSONAL_TOKEN }}
+preserve_hierarchy: true
+files: [
+  # JSON translation files
+  {
+    source: '/i18n/en/**/*',
+    translation: '/i18n/%two_letters_code%/**/%original_file_name%',
+  },
+  # Docs Markdown files
+  {
+    source: '/docs/**/*',
+    translation: '/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%',
+  },
+  # Blog Markdown files
+  # {
+  #   source: '/blog/**/*',
+  #   translation: '/i18n/%two_letters_code%/docusaurus-plugin-content-blog/**/%original_file_name%',
+  # },
+]
