--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "crowdin": "crowdin",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -12,9 +13,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
+    "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@crowdin/cli": "3",
     "@docusaurus/core": "3.0.1",
     "@docusaurus/plugin-sitemap": "^3.0.1",
     "@docusaurus/preset-classic": "3.0.1",
