--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "build",
+    "docs"
+    // Add more directories or files to exclude as needed
+  ]
 }
