--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,3 +4,5 @@ preserve_hierarchy: 1
 files:
   - source: /docs/**/*
     translation: /i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
+bundles:
+  - 2
