--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@docsearch/js": "3",
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
