--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.0",
     "@docusaurus/tsconfig": "^3.1.0",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "typescript": "~5.3.3"
   },
