--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
+    "@docusaurus/theme-classic": "^3.1.0",
     "@docusaurus/theme-mermaid": "^3.1.0",
     "@docusaurus/types": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
