--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@docsearch/js": "3",
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
@@ -23,6 +24,7 @@
     "@docusaurus/theme-mermaid": "^3.1.0",
     "@docusaurus/types": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "antd": "^5.13.2",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
