--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "@docsearch/js": "3",
+    "@docsearch/js": "^3.5.2",
     "@docusaurus/core": "^3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
@@ -25,15 +25,15 @@
     "@docusaurus/types": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "antd": "^5.13.2",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "clsx": "^2.1.0",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.0",
     "@docusaurus/tsconfig": "^3.1.0",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.6",
     "@types/react": "^18.2.48",
     "typescript": "~5.3.3"
   },
