--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^5.2.6",
     "@docsearch/js": "^3.5.2",
     "@docusaurus/core": "^3.1.0",
+    "@docusaurus/plugin-google-gtag": "^3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
     "@docusaurus/preset-classic": "^3.1.0",
     "@docusaurus/theme-classic": "^3.1.0",
