--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docsearch/js": "^4.0.1",
     "@docusaurus/core": "^3.8.1",
     "@docusaurus/preset-classic": "^3.8.1",
+    "@docusaurus/theme-live-codeblock": "^3.8.1",
     "@docusaurus/theme-mermaid": "^3.8.1",
     "@docusaurus/types": "^3.8.1",
     "@mdx-js/react": "^3.1.1",
