--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdx-js/react": "^3.1.1",
     "antd": "^5.27.4",
     "clsx": "^2.1.1",
+    "docusaurus-plugin-image-zoom": "^3.0.1",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
