--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.2",
-    "@docsearch/js": "^4.0.1",
-    "@docusaurus/core": "^3.8.1",
-    "@docusaurus/faster": "^3.8.1",
-    "@docusaurus/preset-classic": "^3.8.1",
-    "@docusaurus/theme-common": "^3.8.1",
-    "@docusaurus/theme-live-codeblock": "^3.8.1",
-    "@docusaurus/theme-mermaid": "^3.8.1",
-    "@docusaurus/types": "^3.8.1",
+    "@docsearch/js": "^4.1.0",
+    "@docusaurus/core": "^3.9.1",
+    "@docusaurus/faster": "^3.9.1",
+    "@docusaurus/preset-classic": "^3.9.1",
+    "@docusaurus/theme-classic": "3.9.1",
+    "@docusaurus/theme-common": "^3.9.1",
+    "@docusaurus/theme-live-codeblock": "^3.9.1",
+    "@docusaurus/theme-mermaid": "^3.9.1",
+    "@docusaurus/types": "^3.9.1",
     "@mdx-js/react": "^3.1.1",
     "antd": "^5.27.4",
     "clsx": "^2.1.1",
@@ -31,14 +32,14 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "rehype-katex": "7",
-    "remark-math": "6"
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.8.1",
-    "@docusaurus/tsconfig": "^3.8.1",
+    "@docusaurus/module-type-aliases": "^3.9.1",
+    "@docusaurus/tsconfig": "^3.9.1",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
+    "@types/react": "^19.1.14",
     "typescript": "~5.9.2"
   },
   "browserslist": {
