--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
           version: 8
       - uses: actions/setup-node@v3
         with:
-          node-version: 20.8.0
-          cache: 'pnpm'
+          node-version: 22.19.0
+          cache: "pnpm"
       - name: Install dependencies
         run: |
           pnpm install --no-frozen-lockfile
