--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@docusaurus/theme-mermaid": "^3.9.1",
     "@docusaurus/types": "^3.9.1",
     "@mdx-js/react": "^3.1.1",
+    "@mermaid-js/layout-elk": "^0.1.9",
+    "add": "^2.0.6",
     "antd": "^5.27.4",
     "clsx": "^2.1.1",
     "docusaurus-plugin-image-zoom": "^3.0.1",
+    "pnpm": "^10.17.1",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
