Option baseUrl is deprecated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@docusaurus/tsconfig",
+  // 忽略所有来自父配置的弃用选项警告。
+  // 并且 转向新的 “moduleResolution bundler / node16 / nodenext”模式。
+  // https://www.typescriptlang.org/tsconfig/#moduleResolution
   "compilerOptions": {
-    "baseUrl": "."
+    "moduleResolution": "bundler",
+    "ignoreDeprecations": "6.0"
   }
 }
