--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,5 @@ jobs:
         with:
           github_token: ${{ secrets.SECRET_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./dist # 文档打包产物的目录名就是build
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
+          publish_dir: ./build # 文档打包产物的目录名就是build
           commit_message: ${{ github.event.head_commit.message }}
