--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "antd": "^5.27.6",
     "clsx": "^2.1.1",
     "docusaurus-plugin-image-zoom": "^3.0.1",
+    "nanoid": "^5.1.6",
     "pnpm": "^10.20.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.0",
