--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docsearch/js": "^4.3.2",
     "@docusaurus/core": "^3.9.2",
     "@docusaurus/faster": "^3.9.2",
+    "@docusaurus/plugin-content-docs": "3.9.2",
     "@docusaurus/preset-classic": "^3.9.2",
     "@docusaurus/theme-classic": "3.9.2",
     "@docusaurus/theme-common": "^3.9.2",
