--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,17 @@ jobs:
     name: Deploy Summary
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
-      - uses: actions/setup-node@v3
+          version: 10
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.19.0
           cache: "pnpm"
       - name: Install dependencies
         run: |
-          echo ${{ github.workspace }}  # 输出工作区上下文路径，就是工程路径
+          echo ${{ github.workspace }}
           pnpm install --frozen-lockfile
       - name: Build Summary
         run: |
