config: migrate to custom domain halcyon666.top
- Update url from github.io to halcyon666.top
- Change baseUrl from /summary/ to /
- Switch Algolia search config to custom domain index
- Update graph generator baseUrl for new paths
- Add CNAME file for GitHub Pages custom domain
- Update deploy workflow with cname parameter

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,5 @@ jobs:
           # Build output to publish to the `gh-pages` branch:
           publish_dir: ./build # 文档打包产物的目录名就是build
           commit_message: ${{ github.event.head_commit.message }}
+          # Custom domain configuration
+          cname: halcyon666.top
