deps: bump dependencies to latest versions
- baseline-browser-mapping: 2.9.7 → 2.9.11
- @types/node: 25.0.2 → 25.0.3
- @docsearch/js: 4.3.2 → 4.4.0
- pnpm: 10.25.0 → 10.26.1
- antd: 6.1.0 → 6.1.1

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
-    "@docsearch/js": "^4.3.2",
+    "@docsearch/js": "^4.4.0",
     "@docusaurus/core": "^3.9.2",
     "@docusaurus/faster": "^3.9.2",
     "@docusaurus/plugin-content-docs": "3.9.2",
@@ -26,13 +26,14 @@
     "@docusaurus/theme-live-codeblock": "^3.9.2",
     "@docusaurus/theme-mermaid": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
+    "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.1.1",
     "@mermaid-js/layout-elk": "^0.2.0",
     "add": "^2.0.6",
-    "antd": "^6.1.0",
+    "antd": "^6.1.1",
     "clsx": "^2.1.1",
     "docusaurus-plugin-image-zoom": "^3.0.1",
-    "pnpm": "^10.25.0",
+    "pnpm": "^10.26.1",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -43,9 +44,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2",
     "@docusaurus/tsconfig": "^3.9.2",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
-    "baseline-browser-mapping": "^2.9.7",
+    "baseline-browser-mapping": "^2.9.11",
     "glob": "^13.0.1",
     "gray-matter": "^4.0.3",
     "ts-node": "^10.9.2",
