fix(moderation): check edited comments to close bypass loophole
- Add 'edited' to workflow triggers for discussion_comment and discussion events
- Ensure comments are re-evaluated when modified by users
- Prevent users from bypassing moderation by editing clean comments

--- a/.github/workflows/comment-moderation.yml
+++ b/.github/workflows/comment-moderation.yml
@@ -2,9 +2,9 @@ name: Comment Moderation
 
 on:
   discussion_comment:
-    types: [created]
+    types: [created, edited]
   discussion:
-    types: [created]
+    types: [created, edited]
 
 permissions:
   discussions: write
