fix(workflow): fix baidu-push sitemap parsing error
Replace xmllint with grep/sed to avoid Cloudflare XML parsing errors

Add XML validation check to detect invalid sitemap content

--- a/.github/workflows/baidu-push.yml
+++ b/.github/workflows/baidu-push.yml
@@ -4,7 +4,7 @@ name: Baidu SEO Push
 on:
   push:
     branches:
-      - main  # 确认一下你的主分支是 main 还是 master
+      - main
   schedule:
     - cron: '0 23 * * *' # 每天北京时间早上7点自动跑一次（UTC 23:00）
   workflow_dispatch:
@@ -16,33 +16,38 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Utilities
-        run: sudo apt-get install -y libxml2-utils
-
-      # 这一步会自动去抓取你网站的 sitemap.xml
       - name: Fetch and Push URLs to Baidu
         env:
           BAIDU_TOKEN: ${{ secrets.BAIDU_TOKEN }}
           SITE_URL: "https://halcyon666.top"
         run: |
-          # 1. 下载最新的 sitemap.xml
-          echo "Downloading sitemap..."
-          curl -sL "$SITE_URL/sitemap.xml" -o sitemap.xml
-          
-          # 2. 提取 sitemap 中的所有 URL 并存入 urls.txt
-          # Docusaurus 生成的 sitemap 标准格式，使用 xmllint 提取
+          # 1. 从 gh-pages 分支获取 sitemap.xml（避免 Cloudflare 拦截）
+          echo "Fetching sitemap from gh-pages branch..."
+          git fetch origin gh-pages
+          git show origin/gh-pages:sitemap.xml > sitemap.xml
+
+          # 验证获取到的是有效 XML 而非 Cloudflare 拦截页
+          if head -c 5 sitemap.xml | grep -q '<?xml'; then
+            echo "Valid sitemap.xml obtained."
+          else
+            echo "ERROR: sitemap.xml is not valid XML. Content preview:"
+            head -c 200 sitemap.xml
+            exit 1
+          fi
+
+          # 2. 提取 sitemap 中的所有 URL（用 grep+sed，无需安装 xmllint）
           echo "Extracting URLs..."
-          xmllint --xpath "//*[local-name()='loc']/text()" sitemap.xml > urls.txt
-          
-          # 检查一下提取了多少个链接
-          COUNT=$(cat urls.txt | wc -l)
+          grep -o '<loc>[^<]*</loc>' sitemap.xml | sed 's/<loc>//g;s/<\/loc>//g' > urls.txt
+
+          COUNT=$(wc -l < urls.txt)
           echo "Found $COUNT URLs to push."
-          
+
           # 3. 调用百度 API 推送
-          if [ $COUNT -gt 0 ]; then
+          if [ "$COUNT" -gt 0 ]; then
             echo "Pushing to Baidu..."
-            result=$(curl -H 'Content-Type:text/plain' --data-binary @urls.txt "http://data.zz.baidu.com/urls?site=$SITE_URL&token=$BAIDU_TOKEN")
+            result=$(curl -s -H 'Content-Type:text/plain' --data-binary @urls.txt "http://data.zz.baidu.com/urls?site=$SITE_URL&token=$BAIDU_TOKEN")
             echo "Baidu Response: $result"
           else
             echo "No URLs found in sitemap."
+            exit 1
           fi
